2012-07-10  Albert Chu <chu11@llnl.gov>

	Add new tool ipmiseld.

	* ipmiseld/: New tool.

	* common/, etc/, man/: Add new manpage entries, init scripts,
	config files, as needed.

	* man/manpage-common-troubleshooting-sel.man: Create new common
	SEL troubleshooting common manpage.

	* config/ac_ipmiseld_cache_dir.m4,
	config/ac_ipmiseld_config_file.m4: New files.

	* man/, freeipmi.spec.in, configure.ac: Update appropriately for
	new tool.

	* libfreeipmi/include/freeipmi/api/ipmi-api.h,
	libfreeipmi/api/ipmi-api.c: Move some internal macros to
	ipmi-api.h so apps know default values.
	
2012-07-10  Albert Chu <chu11@llnl.gov>

	Support OEM extensions for Wistron / Dell Poweredge C6220.

	* libfreeipmi/include/freeipmi/spec/ipmi-oem-spec.h: Rename
	several macros for use clarity.

	* ipmi-oem/: Add Wistron OEM extension commands.

	* ipmi-oem/ipmi-oem-thirdparty.h,
	ipmi-oem/ipmi-oem-thirdparty.c (ipmi_oem_thirdparty_get_system_info_block_pstring):
	New function.

	* ipmi-oem/ipmi-oem-dell.c (_get_dell_system_info_long_string):
	Use new common function
	ipmi_oem_thirdparty_get_system_info_block_pstring.

	* ipmi-sensors/: Support OEM SDR record output details.
	
2012-07-10  Albert Chu <chu11@llnl.gov>

	* Fix up 'make dist' to not distribute files generated by
	configure.
	
2012-07-09  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Update w/ recent changes.
	
2012-07-06  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-sensor-util.c (ipmi_sensor_units_string):
	Fix units output corner case.

	* bmc-info/bmc-info.c (display_system_info_common): Fix
	not-supported completion code detection.
	
2012-07-05  Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Tweak logic of Ipmi_oem_comp_code_strerror callback.
	
2012-07-05  Albert Chu <chu11@llnl.gov>

	* Add support for assume max record sdr record count.
	
2012-07-03  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-oem.h: Add additional
	Poweredge details.
	