@@ -37,229 +37,6 @@
 #include "pstdout.h"
 #include "tool-sensor-common.h"
 
-/* return (1) - is oem intel node manager, fully parsed
- * return (0) - is not oem intel node manager
- * return (-1) - error
- */
-int
-ipmi_sensors_oem_parse_intel_node_manager (ipmi_sensors_state_data_t *state_data,
-                                           uint8_t *nm_device_slave_address,
-                                           uint8_t *sensor_owner_lun,
-                                           uint8_t *channel_number,
-                                           uint8_t *nm_health_event_sensor_number,
-                                           uint8_t *nm_exception_event_sensor_number,
-                                           uint8_t *nm_operational_capabilities_sensor_number,
-                                           uint8_t *nm_alert_threshold_exceeded_sensor_number)
-{
-  uint8_t sdr_record[IPMI_SDR_MAX_RECORD_LENGTH];
-  int sdr_record_len = 0;
-  fiid_obj_t obj_oem_record = NULL;
-  int expected_record_len;
-  uint8_t record_subtype;
-  uint8_t version_number;
-  uint64_t val;
-  int rv = -1;
-
-  assert (state_data);
-
-  if ((sdr_record_len = ipmi_sdr_cache_record_read (state_data->sdr_ctx,
-						    sdr_record,
-						    IPMI_SDR_MAX_RECORD_LENGTH)) < 0)
-    {
-      pstdout_fprintf (state_data->pstate,
-		       stderr,
-		       "ipmi_sdr_cache_record_read: %s\n",
-		       ipmi_sdr_ctx_errormsg (state_data->sdr_ctx));
-      goto cleanup;
-    }
-
-  if ((expected_record_len = fiid_template_len_bytes (tmpl_sdr_oem_intel_node_manager_record)) < 0)
-    {
-      pstdout_fprintf (state_data->pstate,
-                       stderr,
-                       "fiid_template_len_bytes: %s\n",
-                       strerror (errno));
-      goto cleanup;
-    }
-
-  if (expected_record_len < sdr_record_len)
-    {
-      rv = 0;
-      goto cleanup;
-    }
-
-  if (!(obj_oem_record = fiid_obj_create (tmpl_sdr_oem_intel_node_manager_record)))
-    {
-      pstdout_fprintf (state_data->pstate,
-                       stderr,
-                       "fiid_obj_create: %s\n",
-                       strerror (errno));
-      goto cleanup;
-    }
-
-  if (fiid_obj_set_all (obj_oem_record,
-                        sdr_record,
-                        sdr_record_len) < 0)
-    {
-      pstdout_fprintf (state_data->pstate,
-                       stderr,
-                       "fiid_obj_set_all: %s\n",
-                       fiid_obj_errormsg (obj_oem_record));
-      goto cleanup;
-    }
-
-  /* achu: Node Manager documentation states that OEM ID in the
-   * SDR record should be Intel's, but I've seen motherboards w/o
-   * it, so don't bother checking.
-   */
-
-  if (FIID_OBJ_GET (obj_oem_record,
-                    "record_subtype",
-                    &val) < 0)
-    {
-      pstdout_fprintf (state_data->pstate,
-                       stderr,
-                       "FIID_OBJ_GET: 'record_subtype': %s\n",
-                       fiid_obj_errormsg (obj_oem_record));
-      goto cleanup;
-    }
-  record_subtype = val;
-  
-  if (record_subtype != IPMI_SDR_OEM_INTEL_NODE_MANAGER_RECORD_SUBTYPE_NM_DISCOVERY)
-    {
-      rv = 0;
-      goto cleanup;
-    }
-
-  if (FIID_OBJ_GET (obj_oem_record,
-                    "version_number",
-                    &val) < 0)
-    {
-      pstdout_fprintf (state_data->pstate,
-                       stderr,
-                       "FIID_OBJ_GET: 'version_number': %s\n",
-                       fiid_obj_errormsg (obj_oem_record));
-      goto cleanup;
-    }
-  version_number = val;
-
-  if (version_number != IPMI_SDR_OEM_INTEL_NODE_MANAGER_DISCOVERY_VERSION)
-    {
-      rv = 0;
-      goto cleanup;
-    }
-     
-  if (nm_device_slave_address)
-    {
-      if (FIID_OBJ_GET (obj_oem_record,
-                        "nm_device_slave_address",
-                        &val) < 0)
-        {
-          pstdout_fprintf (state_data->pstate,
-                           stderr,
-                           "FIID_OBJ_GET: 'nm_device_slave_address': %s\n",
-                           fiid_obj_errormsg (obj_oem_record));
-          goto cleanup;
-        }
-      (*nm_device_slave_address) = val;
-    }
-
-  if (sensor_owner_lun)
-    {
-      if (FIID_OBJ_GET (obj_oem_record,
-                        "sensor_owner_lun",
-                        &val) < 0)
-        {
-          pstdout_fprintf (state_data->pstate,
-                           stderr,
-                           "FIID_OBJ_GET: 'sensor_owner_lun': %s\n",
-                           fiid_obj_errormsg (obj_oem_record));
-          goto cleanup;
-        }
-      (*sensor_owner_lun) = val;
-    }
-
-  if (channel_number)
-    {
-      if (FIID_OBJ_GET (obj_oem_record,
-                        "channel_number",
-                        &val) < 0)
-        {
-          pstdout_fprintf (state_data->pstate,
-                           stderr,
-                           "FIID_OBJ_GET: 'channel_number': %s\n",
-                           fiid_obj_errormsg (obj_oem_record));
-          goto cleanup;
-        }
-      (*channel_number) = val;
-    }
-
-  if (nm_health_event_sensor_number)
-    {
-      if (FIID_OBJ_GET (obj_oem_record,
-                        "nm_health_event_sensor_number",
-                        &val) < 0)
-        {
-          pstdout_fprintf (state_data->pstate,
-                           stderr,
-                           "FIID_OBJ_GET: 'nm_health_event_sensor_number': %s\n",
-                           fiid_obj_errormsg (obj_oem_record));
-          goto cleanup;
-        }
-      (*nm_health_event_sensor_number) = val;
-    }
-
-  if (nm_exception_event_sensor_number)
-    {
-      if (FIID_OBJ_GET (obj_oem_record,
-                        "nm_exception_event_sensor_number",
-                        &val) < 0)
-        {
-          pstdout_fprintf (state_data->pstate,
-                           stderr,
-                           "FIID_OBJ_GET: 'nm_exception_event_sensor_number': %s\n",
-                           fiid_obj_errormsg (obj_oem_record));
-          goto cleanup;
-        }
-      (*nm_exception_event_sensor_number) = val;
-    }
-
-  if (nm_operational_capabilities_sensor_number)
-    {
-      if (FIID_OBJ_GET (obj_oem_record,
-                        "nm_operational_capabilities_sensor_number",
-                        &val) < 0)
-        {
-          pstdout_fprintf (state_data->pstate,
-                           stderr,
-                           "FIID_OBJ_GET: 'nm_operational_capabilities_sensor_number': %s\n",
-                           fiid_obj_errormsg (obj_oem_record));
-          goto cleanup;
-        }
-      (*nm_operational_capabilities_sensor_number) = val;
-    }
-  
-  if (nm_alert_threshold_exceeded_sensor_number)
-    {
-      if (FIID_OBJ_GET (obj_oem_record,
-                        "nm_alert_threshold_exceeded_sensor_number",
-                        &val) < 0)
-        {
-          pstdout_fprintf (state_data->pstate,
-                           stderr,
-                           "FIID_OBJ_GET: 'nm_alert_threshold_exceeded_sensor_number': %s\n",
-                           fiid_obj_errormsg (obj_oem_record));
-          goto cleanup;
-        }
-      (*nm_alert_threshold_exceeded_sensor_number) = val;
-    }
-
-  rv = 1;
- cleanup:
-  fiid_obj_destroy (obj_oem_record);
-  return (rv);
-}
-
 /* return (0) - no OEM match
  * return (1) - OEM match
  * return (-1) - error, cleanup and return error
@@ -282,14 +59,16 @@ ipmi_sensors_oem_intel_node_manager_output_oem_record (ipmi_sensors_state_data_t
       uint8_t nm_alert_threshold_exceeded_sensor_number;
       int ret;
       
-      if ((ret = ipmi_sensors_oem_parse_intel_node_manager (state_data,
-                                                            &nm_device_slave_address,
-                                                            &sensor_owner_lun,
-                                                            &channel_number,
-                                                            &nm_health_event_sensor_number,
-                                                            &nm_exception_event_sensor_number,
-                                                            &nm_operational_capabilities_sensor_number,
-                                                            &nm_alert_threshold_exceeded_sensor_number)) < 0)
+      if ((ret = ipmi_sdr_oem_parse_intel_node_manager (state_data->sdr_ctx,
+							NULL,
+							0,
+							&nm_device_slave_address,
+							&sensor_owner_lun,
+							&channel_number,
+							&nm_health_event_sensor_number,
+							&nm_exception_event_sensor_number,
+							&nm_operational_capabilities_sensor_number,
+							&nm_alert_threshold_exceeded_sensor_number)) < 0)
         return (-1);
       
       if (ret)
